intest rate return removed from savings goal calc because it was broken and idk how to fix, + you would get a low return in a savings account for most savings goal so its kinda irrelivent

--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
             font-size: 16px;
             cursor: pointer;
         }
+        .blue {
+          color: #2196F3 !important;
+        }
   </style>
       <script>
         // Close the popup when the close button is clicked
@@ -228,7 +231,7 @@
 </div></div>
     <div id="popup-container" class="popup-container">
         <div class="popup-content">
-            <p>This website involves financial calculations and projections. Please note that all calculations are estimates and subject to various factors and risks. Projections will be different than real returns. Consult with a fee only financial advisor. By continuing to use this website, you agree to all terms on our about page. <a href="#about">Take me there</a>. This website also uses cookies.</p>
+            <p>This website involves financial calculations and projections. Please note that all calculations are estimates and subject to various factors and risks. Projections will be different than real returns. Consult with a fee only financial advisor. By continuing to use this website, you agree to all terms on our about page. <a class="blue "href="#about">Take me there</a>. This website also uses cookies.</p>
         </div>
         <div class="popup-close" onclick="closePopup()">Close</div>
     </div>
