pomodoro timer colors reversed

--- a/pomodoro.html
+++ b/pomodoro.html
@@ -62,12 +62,12 @@
             <button id="resetButton" class="btn btn-success">Reset</button>
         </div>
         <div class="form-group">
-            <button id="workButton20" class="btn btn-success">20 Min Work</button>
-            <button id="workButton25" class="btn btn-success">25 Min Work</button>
-            <button id="workButton30" class="btn btn-success">30 Min Work</button>
-            <button id="breakButton5" class="btn btn-primary">5 Min Break</button>
-            <button id="breakButton10" class="btn btn-primary">10 Min Break</button>
-            <button id="breakButton15" class="btn btn-primary">15 Min Break</button>
+            <button id="workButton20" class="btn btn-primary">20 Min Work</button>
+            <button id="workButton25" class="btn btn-primary">25 Min Work</button>
+            <button id="workButton30" class="btn btn-primary">30 Min Work</button>
+            <button id="breakButton5" class="btn btn-success">5 Min Break</button>
+            <button id="breakButton10" class="btn btn-success">10 Min Break</button>
+            <button id="breakButton15" class="btn btn-success">15 Min Break</button>
 
             <button id="test" onclick="testSound()" class="btn btn-error">Test alarm sound</button>
             <br>
