--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@
       <h5><a href="save-1-month-of-expenses.html">How long will it take for me to save 1 month of expenses? Calculator</a></h5>
       <h5>Credit card points vs cashback vs invested returns COMING SOON. Contribute code on our github.</h5>
       <h5>Car miles per gallon cost comparison calculator</h5>
+      <h5><a href="freedomn-day.html">NEW! Freedom Day Calculator</a></h5>
+
     </div>
     <div class="column col-4">
       <h5><a href="net-worth.html">Net Worth and Expense Ratio Calculator</a></h5>
