--- a/net-worth.html
+++ b/net-worth.html
@@ -45,7 +45,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Expense Ratio Calculator</h1>
+        <h1>Net Worth Calculator</h1>
         <div class="form-group">
             <label for="initialInvestment">Initial Investment:</label>
             <input type="number" id="initialInvestment" class="form-input" placeholder="Enter initial investment">
