--- a/index.html
+++ b/index.html
@@ -126,8 +126,6 @@
       <h5><a href="save-1-month-of-expenses.html">How long will it take for me to save 1 month of expenses? Calculator</a></h5>
       <h5>Credit card points vs cashback vs invested returns COMING SOON. Contribute code on our github.</h5>
       <h5>Car miles per gallon cost comparison calculator</h5>
-      <h5><a href="freedomn-day.html">NEW! Freedom Day Calculator</a></h5>
-
     </div>
     <div class="column col-4">
       <h5><a href="net-worth.html">Net Worth and Expense Ratio Calculator</a></h5>
@@ -147,6 +145,8 @@
       <h5><a href="inflation.html">Inflation Calculator</a></h5>
       <h5>Compound interest calculator COMING SOON. Contribute code on our github.</h5>
       <h5><a href="living-off-savings.html">How long can I live off my savings / investments?</a></h5>
+      <h5><a href="freedom-day.html">NEW! Freedom Day Calculator</a></h5>
+
     </div>
   </div>
 </div></div>
