tried to make a new calc and failed

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       <h5>Car miles per gallon cost comparison calculator</h5>
     </div>
     <div class="column col-4">
-      <h5><a href="net-worth.html">Net Worth and Expense Ratio Calculator</a></h5>
+      <h5><a href="net-worth.html">Net Worth with Expense Ratio Calculator</a></h5>
       <h5><a href="rule-of-72.html">How fast will my money double calculator(rule of 72)</a></h5>
       <h5>Financial levels calculators 1 - 7 COMING SOON. Contribute code on our github.</h5>
       <h5><a href="books.html">Reccomended Books</a></h5>      
@@ -180,8 +180,7 @@
   <div class="columns">
     <div class="column col-4">
       <h5><a href="one-rep-max.html">One Rep Max Calculator</a></h5>
-
-    </div>
+          </div>
     <div class="column col-4">
       <h5><a href="bmi.html">BMI &ndash; Body Mass Index Calculator</a></h5>
 
