--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   <header class="navbar">
     <section class="navbar-section">
     <div class="container">
-      <a href="index.html" class="navbar-brand">The Freedom Savers Foundation</a>
+      <a href="index.html" class="navbar-brand">The Freedom Savers Foundation at JeffreyDinackus.com</a>
     </section>
     <section class="navbar-section">
       <a href="https://github.com/JeffreyDinackus/JeffreyDinackus.com" class="btn btn btn-link">Contact</a>
