--- a/bmi.html
+++ b/bmi.html
@@ -33,7 +33,7 @@
         <input type="number" id="ftInWeight" class="form-input">
       </div>
       <div class="form-group">
-        <button type="button" id="calculateFtInBtn" class="btn btn-error">Calculate BMI (ft/in)</button>
+        <button type="button" id="calculateFtInBtn" class="btn btn-success">Calculate BMI (ft/in)</button>
       </div>
     </form>
     <div id="ftInResult"></div>
@@ -48,7 +48,7 @@
         <input type="number" id="cmWeight" class="form-input">
       </div>
       <div class="form-group">
-        <button type="button" id="calculateCmBtn" class="btn btn-error">Calculate BMI (cm)</button>
+        <button type="button" id="calculateCmBtn" class="btn btn-success">Calculate BMI (cm)</button>
       </div>
     </form>
     <div id="cmResult"></div>
