--- a/food-weights.html
+++ b/food-weights.html
@@ -44,7 +44,7 @@
       <li><strong>Milligrams (mg):</strong> <span id="mg-output"></span></li>
       <li><strong>Pounds (lbs):</strong> <span id="lbs-output"></span></li>
     </ul>
-    <button class="btn btn-error" onclick="convert()">Convert</button>
+    <button class="btn btn-success" onclick="convert()">Convert</button>
   
       <div class="form-group">
             <h6><a href="index.html">Click here to go back to the home page</a></h6>
