--- a/ira-vs-roth.html
+++ b/ira-vs-roth.html
@@ -56,7 +56,7 @@
             <input type="number" id="inputTaxRate" class="form-input" min="0" step="1" value="25">
         </div>
         <div class="form-group">
-            <button id="calculateButton" class="btn btn-error">Calculate</button>
+            <button id="calculateButton" class="btn btn-success">Calculate</button>
         </div>                        <div class="form-group">
             <h6><a href="index.html">Click here to go back to the home page</a></h6>
         </div>
