--- a/one-rep-max.html
+++ b/one-rep-max.html
@@ -46,7 +46,7 @@
             <label for="reps">Reps:</label>
             <input type="number" id="reps" class="form-input" placeholder="Enter reps">
         </div>
-        <button id="calculateButton" class="btn btn-error">Calculate</button>
+        <button id="calculateButton" class="btn btn-success">Calculate</button>
         <div id="result" class="form-group"></div>
                         <div class="form-group">
             <h6><a href="index.html">Click here to go back to the home page</a></h6>
