--- a/rule-of-72.html
+++ b/rule-of-72.html
@@ -45,7 +45,7 @@
             <label for="rateOfReturn">Rate of Return (%):</label>
             <input type="number" id="rateOfReturn" class="form-input" placeholder="Enter rate of return">
         </div>
-        <button id="calculateButton" class="btn btn-error">Calculate</button>
+        <button id="calculateButton" class="btn btn-success">Calculate</button>
         <div id="result" class="form-group"></div>
     </div>
 
@@ -63,7 +63,7 @@
             <label for="timePeriod">Time Period (years):</label>
             <input type="number" id="timePeriod" class="form-input" placeholder="Enter time period">
         </div>
-        <button id="calculateButton2" class="btn btn-error">Calculate</button>
+        <button id="calculateButton2" class="btn btn-success">Calculate</button>
         <div id="result2" class="form-group"></div>
     </div>
 
@@ -77,7 +77,7 @@
             <label for="customTimePeriod">Time Period (years):</label>
             <input type="number" id="customTimePeriod" class="form-input" placeholder="Enter time period">
         </div>
-        <button id="calculateButton3" class="btn btn-error">Calculate</button>
+        <button id="calculateButton3" class="btn btn-success">Calculate</button>
         <div id="result3" class="form-group"></div>
     </div>
         <div class="form-group">
