--- a/save-1-month-of-expenses.html
+++ b/save-1-month-of-expenses.html
@@ -46,7 +46,7 @@
         </div>
         <p>The savings rate should be less than 100%.</p>
         <div class="form-group">
-            <button id="calculateButton" class="btn btn-error">Calculate</button>
+            <button id="calculateButton" class="btn btn-success">Calculate</button>
         </div>
         <div id="result" class="form-group"></div> <!-- Result element -->
         <div id="result2" class="form-group"></div> <!-- Result2 element -->
