--- a/bimonthly-mortgage.html
+++ b/bimonthly-mortgage.html
@@ -61,7 +61,7 @@
             <input type="number" id="amortization" class="form-input" placeholder="Enter amortization length" required>
         </div>
         <div class="form-group">
-            <button id="calculateButton" class="btn btn-error">CALCULATE</button>
+            <button id="calculateButton" class="btn btn-success">CALCULATE</button>
         </div>
         <div class="result">
             <h2>Results:</h2>
