--- a/inflation.html
+++ b/inflation.html
@@ -31,7 +31,7 @@
       <input type="number" id="rate-of-return" step="any" value="0">
     </div>
     <div class="form-group">
-      <button id="calculate-btn" class="btn btn-error">Calculate</button>
+      <button id="calculate-btn" class="btn btn-success">Calculate</button>
     </div>
       <div class="form-group">
             <h6><a href="index.html">Click here to go back to the home page</a></h6>
