--- a/net-worth.html
+++ b/net-worth.html
@@ -96,7 +96,7 @@
                 <option value="daily">Daily</option>
             </select>
         </div>
-        <button id="calculateButton" class="btn btn-error">Calculate</button>                        <div class="form-group">
+        <button id="calculateButton" class="btn btn-success">Calculate</button>                        <div class="form-group">
             <h6><a href="index.html">Click here to go back to the home page</a></h6>
         </div>
         <div class="form-group">
