--- a/pomodoro.html
+++ b/pomodoro.html
@@ -58,7 +58,7 @@
             <input type="number" id="inputTime" class="form-input" placeholder="Enter time">
         </div>
         <div class="form-group">
-            <button id="startButton" class="btn btn-error">Start</button>
+            <button id="startButton" class="btn btn-success">Start</button>
             <button id="resetButton" class="btn btn-success">Reset</button>
         </div>
         <div class="form-group">
@@ -69,7 +69,7 @@
             <button id="breakButton10" class="btn btn-success">10 Min Break</button>
             <button id="breakButton15" class="btn btn-success">15 Min Break</button>
 
-            <button id="test" onclick="testSound()" class="btn btn-error">Test alarm sound</button>
+            <button id="test" onclick="testSound()" class="btn btn-success">Test alarm sound</button>
             <br>
         <label for="alarm-sound">Alarm sound:</label>
         <div class="form-group">
