--- a/working-for-myself.html
+++ b/working-for-myself.html
@@ -54,7 +54,7 @@
             <label>Last week, I worked <span id="selfEmployedHours"></span> hours for myself.</label>
         </div>
          <div id="result" class="form-group"></div>
-        <button id="calculateButton" class="btn btn-error">Calculate</button>                <div class="form-group">
+        <button id="calculateButton" class="btn btn-success">Calculate</button>                <div class="form-group">
             <h6><a href="index.html">Click here to go back to the home page</a></h6>
         </div>
         <div class="form-group">
