adding some explanatory text

--- a/life.html
+++ b/life.html
@@ -86,6 +86,7 @@
     <div class="form-group">
       <h6><a href="index.html">Click here to go back to the home page</a></h6>
     </div>
+    <p>This calculator was inspired by the book 4000 Weeks by Oliver Burkeman.</p>
     <h6>Leap years are accounted for.</h6>
     <form id="calculator-form">
       <div class="form-group">
