new bible quote

--- a/index.html
+++ b/index.html
@@ -223,7 +223,11 @@
     <div class="container">
     <div class="content">
     <h2>Sayings of the wise:</h2>
-    <p>It is better not to make a vow than to make one and not fulfill it. Ecclesiates 5:5 NIV</p>    
+    <p>It is better not to make a vow than to make one and not fulfill it. Ecclesiates 5:5 NIV</p> 
+    <p>No one remembers the former generations,<br>
+    and even those yet to come<br>
+    will not be remembered<br>
+    by those who follow them. Ecclesiates 1:11 NIV</p>
   </div>
     <div class="container">
     <div class="content">
