fixing UI bug on homepage

--- a/index.html
+++ b/index.html
@@ -193,14 +193,14 @@
       </div>
     </div>
   </div>
-
+  </div>
   <div class="container">
     <div class="content">
-      <h2>Productivity</h2>
+      <h2>Credit Cards</h2>
 
       <div class="columns">
         <div class="column col-4">
-          <h5><a href="pomodoro.html">Pomodoro timer</a></h5>
+          <h5><a href="524calc.html">Chase 5/24 Status Calculator</a></h5>
 
         </div>
         <div class="column col-4">
@@ -212,6 +212,7 @@
       </div>
     </div>
   </div>
+
   <div class="container">
     <div class="content">
       <h2>Fitness</h2>
@@ -230,25 +231,13 @@
         </div>
       </div>
 
-      <div class="container">
-        <div class="content">
-          <h2>Credit Cards</h2>
 
-          <div class="columns">
-            <div class="column col-4">
-              <h5><a href="524calc.html">NEW! Chase 5/24 Calculator </a></h5>
-            </div>
-            <div class="column col-4">
-
-            </div>
-            <div class="column col-4">
-
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
   </div>
+  </div>
+
+
+
 
   <div class="container">
     <div class="content">
