adding the library project to my website

--- a/index.html
+++ b/index.html
@@ -237,7 +237,24 @@
   </div>
 
 
+  <div class="container">
+    <div class="content">
+      <h2>See some of Jeffrey's work</h2>
 
+      <div class="columns">
+        <div class="column col-4">
+          <h5><a href="library.html">The Library Project (odin project)</a></h5>
+
+        </div>
+        <div class="column col-4">
+
+        </div>
+        <div class="column col-4">
+
+        </div>
+      </div>
+    </div>
+  </div>
 
   <div class="container">
     <div class="content">
