adding toggle button functionality

--- a/library.html
+++ b/library.html
@@ -59,6 +59,7 @@
               <p id="book1-author"></p>
               <p id="book1-pages"></p>
               <p id="book1-read"></p>
+              <button class="btn btn-success" onclick="toggleRead(1)">Toggle read status</button>
             </div>
           </div>
         </div>
@@ -71,6 +72,8 @@
               <p id="book4-author"></p>
               <p id="book4-pages"></p>
               <p id="book4-read"></p>
+              <button class="btn btn-success" onclick="toggleRead(4)">Toggle read status</button>
+
             </div>
           </div>
         </div>
@@ -84,6 +87,8 @@
               <p id="book7-author"></p>
               <p id="book7-pages"></p>
               <p id="book7-read"></p>
+              <button class="btn btn-success" onclick="toggleRead(7)">Toggle read status</button>
+
             </div>
           </div>
         </div>
@@ -107,6 +112,8 @@
               <p id="book2-author"></p>
               <p id="book2-pages"></p>
               <p id="book2-read"></p>
+              <button class="btn btn-success" onclick="toggleRead(2)">Toggle read status</button>
+
             </div>
           </div>
         </div>
@@ -120,6 +127,7 @@
               <p id="book5-author"></p>
               <p id="book5-pages"></p>
               <p id="book5-read"></p>
+              <button class="btn btn-success" onclick="toggleRead(5)">Toggle read status</button>
             </div>
           </div>
         </div>
@@ -132,6 +140,7 @@
               <p id="book8-author"></p>
               <p id="book8-pages"></p>
               <p id="book8-read"></p>
+              <button class="btn btn-success" onclick="toggleRead(8)">Toggle read status</button>
             </div>
           </div>
         </div>
@@ -145,6 +154,7 @@
               <p id="book10-author"></p>
               <p id="book10-pages"></p>
               <p id="book10-read"></p>
+              <button class="btn btn-success" onclick="toggleRead(10)">Toggle read status</button>
               <p>Note: This project supports up to 10 books</p>
             </div>
           </div>
@@ -160,6 +170,7 @@
               <p id="book3-author"></p>
               <p id="book3-pages"></p>
               <p id="book3-read"></p>
+              <button class="btn btn-success" onclick="toggleRead(3)">Toggle read status</button>
             </div>
           </div>
         </div>
@@ -175,6 +186,7 @@
               <p id="book6-author"></p>
               <p id="book6-pages"></p>
               <p id="book6-read"></p>
+              <button class="btn btn-success" onclick="toggleRead(6)">Toggle read status</button>
             </div>
           </div>
         </div>
@@ -187,6 +199,7 @@
               <p id="book9-author"></p>
               <p id="book9-pages"></p>
               <p id="book9-read"></p>
+              <button class="btn btn-success" onclick="toggleRead(9)">Toggle read status</button>
             </div>
           </div>
         </div>
