novelty article done

--- a/index.html
+++ b/index.html
@@ -247,7 +247,12 @@
 
         </div>
         <div class="column col-4">
-
+          <h5><a href="https://www.resume.jeffreydinackus.com">Cloud Resume Project, Resume.JeffreyDinackus.com</a>
+            using AWS</h5>
+          <h5>to
+            learn more about the Cloud Resume Project visit <a
+              href="https://cloudresumechallenge.dev/">https://cloudresumechallenge.dev/</a></h5>
+          </h5>
         </div>
         <div class="column col-4">
 
