--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
           </h5>
         </div>
         <div class="column col-4">
-          <h5><a href="tictactoe.html">NEW! Tic Tac Toe with EASY AND HARD AI.</a> (odin project javascript)</h5>
+          <h5><a href="x.html">NEW! Tic Tac Toe with EASY AND HARD AI.</a> (odin project javascript)</h5>
         </div>
       </div>
     </div>
